Tests/Error/Ordering/.build/failonce.pr
{
  "name": "FailOnce",
  "description": "Throws an error with message \u0022fail\u0022.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "throw error \u0022fail\u0022",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "error",
          "action": "throw",
          "parameters": [
            {
              "name": "Message",
              "value": "fail",
              "type": "string"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/FailOnce.goal",
  "prPath": "/.build/failonce.pr",
  "hash": "f1648733b8656221b79a27895b2aaed27dd6586ca475761244b73193182e4865",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}